--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head> 
+	<script src = "index.js"></script>
 	<title></title>
 </head>
 <body>
-	
+
 hi there.
 
 </body>
